<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="items"
            type="com.safeway.scanandgo.viewmodels.CheckoutViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="horizontal">

            <TextView
                style="@style/BlackTitle3Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/confirm_pay" />

            <ImageView
                android:id="@+id/dialog_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_two" />

        <LinearLayout
            android:id="@+id/payment_method"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin_34"
                android:layout_height="@dimen/margin_22"
                android:layout_marginStart="@dimen/margin_23"
                android:layout_marginEnd="@dimen/margin_16"
                tools:ignore="ContentDescription"
                app:srcCompat="@drawable/ic_grey_pm_visa" />

            <TextView
                style="@style/BlackTitle3Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment_card_faux" />

            <TextView
                android:id="@+id/pm_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_23"
                android:gravity="end"
                android:textSize="@dimen/font_size_12"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/lipstick"
                android:textAllCaps="true"
                android:text="@string/change" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/choose_payment_method"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_34"
                android:layout_height="@dimen/margin_22"
                android:layout_marginStart="@dimen/margin_23"
                android:layout_marginEnd="@dimen/margin_16"
                tools:ignore="ContentDescription"
                app:srcCompat="@drawable/ic_grey_pm_add" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_16"
                android:fontFamily="sans-serif"
                android:textColor="@color/purplish_grey"
                android:text="@string/payment_method" />

            <Button
                android:id="@+id/cta_add"
                android:layout_width="@dimen/margin_100"
                android:layout_height="@dimen/margin_40"
                android:background="@color/lipstick"
                android:text="@string/add"
                style="@style/WhiteTitle4Bold"
                android:textAllCaps="false"
                android:layout_marginEnd="@dimen/margin_23" />

        </LinearLayout>

        <include layout="@layout/totals_section" />

    </LinearLayout>

</layout>