<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_25"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <TextView
                style="@style/BlackTitle4Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_14"
                android:fontFamily="sans-serif"
                android:textColor="@color/black_two"
                android:text="$86.89" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_14"
                android:fontFamily="sans-serif"
                android:textColor="@color/lipstick"
                android:text="@string/clubcard_savings" />

            <TextView
                style="@style/RedTitle4Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- $4.27" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_14"
                android:fontFamily="sans-serif"
                android:textColor="@color/lipstick"
                android:text="@string/just_4_u" />

            <TextView
                style="@style/RedTitle4Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- $4.27" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/BlackTitle4Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_14"
                android:fontFamily="sans-serif"
                android:textColor="@color/black_two"
                android:text="$10.40" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_25"
        android:orientation="horizontal">

        <TextView
            style="@style/BlackTitle3Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/total" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_24"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="$97.29" />

    </LinearLayout>

    <include layout="@layout/cta_buttons" />

</merge>